--- a/src/App.scss
+++ b/src/App.scss
@@ -120,7 +120,7 @@ header h1 {
 }
 
 #about {
-	background: #fff;
+background-image: url("../public/images/background-photo.png");
 	overflow: hidden;
 }
 
