--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 @import "/src/scss/themes/theme-dark.scss";
 @import "/src/scss/themes/theme-light.scss";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/devicon/devicon.min.css");
+
 
 html {
   font-size: 62.5%;
@@ -46,7 +48,7 @@ header {
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 0;
-  background-image: url("../public/images/night1.png");
+  background-image: url("../public/images/background.jpg");
   color: white;
 }
 
